--- a/themes/H3-Theme/layouts/partials/head.html
+++ b/themes/H3-Theme/layouts/partials/head.html
@@ -14,3 +14,10 @@
 
 <!-- Tab Icon -->
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}img/H3-Black-Logo.png" type="image/x-icon" />
+
+<!-- ScrollMagic -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
