--- a/themes/H3-Theme/static/scss/layout/login.scss
+++ b/themes/H3-Theme/static/scss/layout/login.scss
@@ -2,3 +2,15 @@
     text-align: center;
     padding: 20px;
 }
+
+#container {
+    margin: 55vh 0;
+    padding: 50px;
+    outline: 1px dashed orange;
+}
+
+#block {
+    padding: 10px;
+    border: 1px solid black;
+    font-family: Helvetica;
+}
